compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__constants_in_guards1.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub const list = [1, 2, 3]\n\npub fn main(arg) {\n  case arg {\n    _ if arg == list -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub const list = [1, 2, 3]

pub fn main(arg) {
  case arg {
    _ if arg == list -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 4).
-spec main(list(integer())) -> integer().
main(Arg) ->
    case Arg of
    _ when Arg =:= [1, 2, 3] ->
        1;

    _ ->
        0
end.
