compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__module_list_access.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\n          import hero\n          pub fn main() {\n            let names = [\"Tony Stark\", \"Bruce Wayne\"]\n            case names {\n              n if n == hero.heroes -> True\n              _ -> False\n            }\n          }\n        "
---
----- SOURCE CODE

          import hero
          pub fn main() {
            let names = ["Tony Stark", "Bruce Wayne"]
            case names {
              n if n == hero.heroes -> True
              _ -> False
            }
          }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 3).
-spec main() -> boolean().
main() ->
    Names = [<<"Tony Stark"/utf8>>, <<"Bruce Wayne"/utf8>>],
case Names of
    N when N =:= [<<"Tony Stark"/utf8>>, <<"Bruce Wayne"/utf8>>] ->
        true;

    _ ->
        false
end.
